Fix list view table column display on mobile view

--- a/core/app/themes/suite8/css/layout/_listview.scss
+++ b/core/app/themes/suite8/css/layout/_listview.scss
@@ -130,11 +130,6 @@
   td {
     word-wrap: break-word;
   }
-  tbody,
-  tr {
-    display: block;
-    width: 100%;
-  }
 
   .responsive-table-row th {
     margin: 0;
